<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvKotlin"
        android:layout_width="96dp"
        android:layout_height="33dp"
        android:gravity="center_horizontal"
        android:text="@string/tvKotlin"
        android:textAlignment="center"
        android:textColor="#F24209"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etGrados"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/etGrados"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#20AB91"
        android:textColorHint="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKotlin" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="411dp"
        android:layout_height="77dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:text="@string/tvResultado"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkMostrarImagen" />

    <RadioGroup
        android:id="@+id/rgGrados"
        android:layout_width="209dp"
        android:layout_height="73dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGrados">

        <RadioButton
            android:id="@+id/rbCentigradosFahrenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rbCentigradosFahrenheit"
            android:textColor="#F24209"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbFahrenheitCentigrados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbFahrenheitCentigrados"
            android:textColor="#F24209"
            android:textStyle="bold" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imgGrados"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGrados" />

    <CheckBox
        android:id="@+id/chkMostrarImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/chkMostrarImagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgGrados" />

    <Button
        android:id="@+id/btnCambiarAJava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="cambiarActivity"
        android:text="@string/btnCambiarAJava"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="sendMessage"
        android:text="@string/btnKotlinMensaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

</androidx.constraintlayout.widget.ConstraintLayout>